# reader3

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  pyproject.toml  reader3.py  server.py  setup.cfg
docs/: setup.md
